--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -141,7 +141,7 @@ button.next:hover
 
 .thumbs img.active
 {
-	border: 4px inset black;
+	border: 4px rgb(181, 80, 80);
 }
 
 .thumbs img:not(.active)
